<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <TextView
        android:gravity="center"
        android:textAlignment="center"
        android:text="@string/_0"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/textView0"
        android:layout_weight="85.0"/>

    <TextView
        android:gravity="center"
        android:textAlignment="center"
        android:text="@string/textview1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:id="@+id/textView1"
        android:layout_weight="66.6"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="33.3"
        tools:ignore="VisualLintBounds">

        <TextView
            android:gravity="center"
            android:text="@string/textview2"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:id="@+id/textView2"/>

        <TextView
            android:gravity="center"
            android:text="@string/textview3"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:id="@+id/textView3" />
    </LinearLayout>

</LinearLayout>